--- a/IOS-combine/Modules/Calling/Cell/GroupCallingCell.xib
+++ b/IOS-combine/Modules/Calling/Cell/GroupCallingCell.xib
@@ -3,7 +3,6 @@
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
-        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -27,25 +26,17 @@
                                     <constraint firstAttribute="height" constant="70" id="hM8-Di-PDQ"/>
                                 </constraints>
                             </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zhA-Ub-6yN">
-                                <rect key="frame" x="48" y="95" width="52" height="26.5"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="22"/>
-                                <color key="textColor" name="AppDarkIndigoColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="EZg-m9-8tr">
                                 <rect key="frame" x="0.0" y="0.0" width="148" height="121"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </view>
                         </subviews>
-                        <color key="backgroundColor" name="AppCallingViewGrey"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="zhA-Ub-6yN" firstAttribute="top" secondItem="k3j-gy-l2M" secondAttribute="bottom" constant="-0.5" id="BH5-pP-yEe"/>
                             <constraint firstItem="k3j-gy-l2M" firstAttribute="centerX" secondItem="DnZ-mI-92c" secondAttribute="centerX" id="DOP-Cz-jdp"/>
                             <constraint firstItem="k3j-gy-l2M" firstAttribute="centerY" secondItem="DnZ-mI-92c" secondAttribute="centerY" id="Dy2-Oo-WO4"/>
                             <constraint firstItem="EZg-m9-8tr" firstAttribute="leading" secondItem="DnZ-mI-92c" secondAttribute="leading" id="FbH-bM-XXF"/>
                             <constraint firstAttribute="bottom" secondItem="EZg-m9-8tr" secondAttribute="bottom" id="i9E-DX-Kp9"/>
-                            <constraint firstItem="zhA-Ub-6yN" firstAttribute="centerX" secondItem="DnZ-mI-92c" secondAttribute="centerX" id="v5C-N0-MRX"/>
                             <constraint firstAttribute="trailing" secondItem="EZg-m9-8tr" secondAttribute="trailing" id="w8u-Xq-jr7"/>
                             <constraint firstItem="EZg-m9-8tr" firstAttribute="top" secondItem="DnZ-mI-92c" secondAttribute="top" id="xc7-Uc-zRT"/>
                         </constraints>
@@ -53,7 +44,7 @@
                 </subviews>
             </view>
             <viewLayoutGuide key="safeArea" id="ZTg-uK-7eu"/>
-            <color key="backgroundColor" name="AppCallingViewGrey"/>
+            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <constraints>
                 <constraint firstItem="DnZ-mI-92c" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="Ahl-oT-Zj8"/>
                 <constraint firstAttribute="bottom" secondItem="DnZ-mI-92c" secondAttribute="bottom" id="KGB-ZJ-Kbu"/>
@@ -63,7 +54,6 @@
             <size key="customSize" width="148" height="121"/>
             <connections>
                 <outlet property="personAvatar" destination="k3j-gy-l2M" id="4jV-Ie-Ylu"/>
-                <outlet property="remoteName" destination="zhA-Ub-6yN" id="iOw-eP-UJd"/>
                 <outlet property="remoteView" destination="EZg-m9-8tr" id="Mjn-h5-oSz"/>
             </connections>
             <point key="canvasLocation" x="-257.97101449275362" y="123.54910714285714"/>
@@ -71,11 +61,5 @@
     </objects>
     <resources>
         <image name="noun" width="100" height="100"/>
-        <namedColor name="AppCallingViewGrey">
-            <color red="0.7686274509803922" green="0.7686274509803922" blue="0.7686274509803922" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-        </namedColor>
-        <namedColor name="AppDarkIndigoColor">
-            <color red="0.098039215686274508" green="0.011764705882352941" blue="0.32941176470588235" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-        </namedColor>
     </resources>
 </document>
