chat bugs fixes

--- a/IOS-combine/Modules/Login/Login.storyboard
+++ b/IOS-combine/Modules/Login/Login.storyboard
@@ -43,7 +43,7 @@
                                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillProportionally" spacing="16" translatesAutoresizingMaskIntoConstraints="NO" id="6YX-Wf-h1d">
                                                 <rect key="frame" x="14" y="119.5" width="272" height="92"/>
                                                 <subviews>
-                                                    <textField opaque="NO" tag="2" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="rawal" borderStyle="roundedRect" placeholder="Username / Email" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="v02-sB-5ZD">
+                                                    <textField opaque="NO" tag="2" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Username / Email" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="v02-sB-5ZD">
                                                         <rect key="frame" x="0.0" y="0.0" width="272" height="38"/>
                                                         <constraints>
                                                             <constraint firstAttribute="height" constant="38" id="gy9-je-kJg"/>
@@ -51,7 +51,7 @@
                                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                         <textInputTraits key="textInputTraits" keyboardType="emailAddress"/>
                                                     </textField>
-                                                    <textField opaque="NO" tag="3" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="12345678" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Ri7-XD-9Sl">
+                                                    <textField opaque="NO" tag="3" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Ri7-XD-9Sl">
                                                         <rect key="frame" x="0.0" y="54" width="272" height="38"/>
                                                         <constraints>
                                                             <constraint firstAttribute="height" constant="38" id="BfC-qu-pOa"/>
