--- a/IOS-combine/Common/Overlay/BroadcastOverlay.xib
+++ b/IOS-combine/Common/Overlay/BroadcastOverlay.xib
@@ -3,6 +3,7 @@
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -64,10 +65,13 @@
                         </stackView>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="DFh-bk-tOp">
                             <rect key="frame" x="100" y="330" width="154" height="44"/>
+                            <color key="backgroundColor" name="AppCallingViewGrey"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="44" id="V0w-dd-7Uf"/>
                             </constraints>
-                            <state key="normal" title="CONTINUE"/>
+                            <state key="normal" title="CONTINUE">
+                                <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                            </state>
                             <connections>
                                 <action selector="didTapContinue:" destination="-1" eventType="touchUpInside" id="8c4-cT-9TC"/>
                             </connections>
@@ -111,5 +115,8 @@
     </objects>
     <resources>
         <image name="close" width="24" height="28"/>
+        <namedColor name="AppCallingViewGrey">
+            <color red="0.7686274509803922" green="0.7686274509803922" blue="0.7686274509803922" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
     </resources>
 </document>
