--- a/IOS-combine/Modules/Login/Login.storyboard
+++ b/IOS-combine/Modules/Login/Login.storyboard
@@ -25,14 +25,14 @@
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                                 <subviews>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Applogo" translatesAutoresizingMaskIntoConstraints="NO" id="cLf-EF-j0e">
-                                        <rect key="frame" x="153.5" y="21" width="68" height="50"/>
+                                        <rect key="frame" x="153.5" y="12" width="68" height="50"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="68" id="5lZ-zs-gUN"/>
                                             <constraint firstAttribute="height" constant="50" id="RQm-uQ-EGH"/>
                                         </constraints>
                                     </imageView>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="QK5-ia-xAZ">
-                                        <rect key="frame" x="37.5" y="103" width="300" height="461.5"/>
+                                        <rect key="frame" x="37.5" y="94" width="300" height="479.5"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Sign In" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="E1F-9I-09l">
                                                 <rect key="frame" x="119" y="32" width="62" height="23.5"/>
@@ -62,9 +62,9 @@
                                                 </subviews>
                                             </stackView>
                                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="38" translatesAutoresizingMaskIntoConstraints="NO" id="MJQ-mP-Lm2">
-                                                <rect key="frame" x="70" y="309.5" width="160" height="116"/>
+                                                <rect key="frame" x="70" y="309.5" width="160" height="134"/>
                                                 <subviews>
-                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="IfD-D3-LN2">
+                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="IfD-D3-LN2" customClass="CustomButton" customModule="IOS_combine" customModuleProvider="target">
                                                         <rect key="frame" x="0.0" y="0.0" width="160" height="48"/>
                                                         <constraints>
                                                             <constraint firstAttribute="width" constant="160" id="ami-3h-iea"/>
@@ -76,14 +76,17 @@
                                                             <action selector="didTapLogin:" destination="ab8-6G-di8" eventType="touchUpInside" id="lde-Or-7UZ"/>
                                                         </connections>
                                                     </button>
-                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="LR9-b7-upS">
-                                                        <rect key="frame" x="0.0" y="86" width="160" height="30"/>
+                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="LR9-b7-upS" customClass="CustomButton" customModule="IOS_combine" customModuleProvider="target">
+                                                        <rect key="frame" x="0.0" y="86" width="160" height="48"/>
                                                         <state key="normal" title="SIGN UP"/>
                                                         <connections>
                                                             <action selector="didTapSignup:" destination="ab8-6G-di8" eventType="touchUpInside" id="f4G-h2-c7W"/>
                                                         </connections>
                                                     </button>
                                                 </subviews>
+                                                <constraints>
+                                                    <constraint firstItem="LR9-b7-upS" firstAttribute="height" secondItem="IfD-D3-LN2" secondAttribute="height" id="AUK-nl-fe9"/>
+                                                </constraints>
                                             </stackView>
                                         </subviews>
                                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
