--- a/IOS-combine/Modules/Calling/Xib/GroupCallingUpdatedView.xib
+++ b/IOS-combine/Modules/Calling/Xib/GroupCallingUpdatedView.xib
@@ -28,7 +28,7 @@
                     </constraints>
                 </imageView>
                 <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="I87-8m-hme">
-                    <rect key="frame" x="182" y="195" width="50" height="100"/>
+                    <rect key="frame" x="182" y="182" width="50" height="100"/>
                     <subviews>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jYW-Rj-WvQ">
                             <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
@@ -45,10 +45,10 @@
                     </subviews>
                 </stackView>
                 <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="Uwm-xl-oEZ">
-                    <rect key="frame" x="8" y="117" width="398" height="128"/>
+                    <rect key="frame" x="8" y="132" width="398" height="100"/>
                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <constraints>
-                        <constraint firstAttribute="height" constant="128" id="55a-4i-sLg"/>
+                        <constraint firstAttribute="height" constant="100" id="55a-4i-sLg"/>
                     </constraints>
                     <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="10" minimumInteritemSpacing="10" id="h2B-Z2-gEM">
                         <size key="itemSize" width="128" height="128"/>
@@ -57,8 +57,8 @@
                         <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                     </collectionViewFlowLayout>
                 </collectionView>
-                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="atO-nL-8Pe">
-                    <rect key="frame" x="350" y="225" width="32" height="84"/>
+                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="40" translatesAutoresizingMaskIntoConstraints="NO" id="atO-nL-8Pe">
+                    <rect key="frame" x="350" y="202" width="32" height="104"/>
                     <subviews>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7UX-Fq-ifd">
                             <rect key="frame" x="0.0" y="0.0" width="32" height="32"/>
@@ -68,7 +68,7 @@
                             </connections>
                         </button>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Xh7-nN-2ad">
-                            <rect key="frame" x="0.0" y="52" width="32" height="32"/>
+                            <rect key="frame" x="0.0" y="72" width="32" height="32"/>
                             <state key="normal" image="Volumn On"/>
                             <state key="selected" image="Volume Off"/>
                             <connections>
@@ -77,11 +77,11 @@
                         </button>
                     </subviews>
                 </stackView>
-                <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="14" translatesAutoresizingMaskIntoConstraints="NO" id="foV-TZ-2vw">
-                    <rect key="frame" x="0.0" y="802" width="414" height="60"/>
+                <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="30" translatesAutoresizingMaskIntoConstraints="NO" id="foV-TZ-2vw">
+                    <rect key="frame" x="87" y="782" width="240" height="60"/>
                     <subviews>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="z6b-pa-cTX">
-                            <rect key="frame" x="0.0" y="0.0" width="128.5" height="60"/>
+                            <rect key="frame" x="0.0" y="0.0" width="60" height="60"/>
                             <state key="normal" image="stopvideo"/>
                             <state key="selected" image="video"/>
                             <connections>
@@ -89,14 +89,14 @@
                             </connections>
                         </button>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="XbX-Hg-sz4">
-                            <rect key="frame" x="142.5" y="0.0" width="129" height="60"/>
+                            <rect key="frame" x="90" y="0.0" width="60" height="60"/>
                             <state key="normal" image="end"/>
                             <connections>
                                 <action selector="didTapHangup:" destination="i5M-Pr-FkT" eventType="touchUpInside" id="WNC-bd-iAt"/>
                             </connections>
                         </button>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ygx-0w-WsE">
-                            <rect key="frame" x="285.5" y="0.0" width="128.5" height="60"/>
+                            <rect key="frame" x="180" y="0.0" width="60" height="60"/>
                             <state key="normal" image="mute"/>
                             <state key="selected" image="unMute"/>
                             <connections>
@@ -105,17 +105,17 @@
                         </button>
                     </subviews>
                 </stackView>
-                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="J2H-9O-12D">
-                    <rect key="frame" x="56.5" y="56" width="196.5" height="49"/>
+                <stackView hidden="YES" opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="J2H-9O-12D">
+                    <rect key="frame" x="56.5" y="41.5" width="65" height="78.5"/>
                     <subviews>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="You are video calling with " textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cAr-Vs-nPM">
-                            <rect key="frame" x="0.0" y="0.0" width="196.5" height="20.5"/>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cAr-Vs-nPM">
+                            <rect key="frame" x="0.0" y="0.0" width="65" height="50"/>
                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                             <color key="textColor" name="AppDarkGrey"/>
                             <nil key="highlightedColor"/>
                         </label>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Group" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="L5z-Po-KXn">
-                            <rect key="frame" x="0.0" y="28.5" width="196.5" height="20.5"/>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="A Group" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="L5z-Po-KXn">
+                            <rect key="frame" x="0.0" y="58" width="65" height="20.5"/>
                             <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="17"/>
                             <nil key="textColor"/>
                             <nil key="highlightedColor"/>
@@ -128,7 +128,7 @@
                     <color key="textColor" name="AppDarkGrey"/>
                     <nil key="highlightedColor"/>
                 </label>
-                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="elf-R6-Eg3">
+                <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="elf-R6-Eg3">
                     <rect key="frame" x="20" y="67" width="24.5" height="27"/>
                     <state key="normal" image="arrow-left"/>
                     <connections>
@@ -147,12 +147,11 @@
                 <constraint firstItem="mk5-lE-iL0" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" constant="20" id="9q2-r0-lii"/>
                 <constraint firstItem="J2H-9O-12D" firstAttribute="leading" secondItem="elf-R6-Eg3" secondAttribute="trailing" constant="12" id="AmR-NN-cDA"/>
                 <constraint firstItem="I87-8m-hme" firstAttribute="top" secondItem="Uwm-xl-oEZ" secondAttribute="bottom" constant="-50" id="BiV-7l-HhH"/>
-                <constraint firstItem="foV-TZ-2vw" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="Clc-tH-OLT"/>
                 <constraint firstItem="pWP-b5-vES" firstAttribute="centerX" secondItem="Uwm-xl-oEZ" secondAttribute="centerX" id="E6J-Rq-rC8"/>
-                <constraint firstItem="foV-TZ-2vw" firstAttribute="trailing" secondItem="fnl-2z-Ty3" secondAttribute="trailing" id="FbS-o4-oeM"/>
-                <constraint firstItem="atO-nL-8Pe" firstAttribute="top" secondItem="Uwm-xl-oEZ" secondAttribute="bottom" constant="-20" id="KUx-M6-sMc"/>
-                <constraint firstItem="fnl-2z-Ty3" firstAttribute="bottom" secondItem="foV-TZ-2vw" secondAttribute="bottom" id="Mg0-1E-z3C"/>
+                <constraint firstItem="atO-nL-8Pe" firstAttribute="top" secondItem="Uwm-xl-oEZ" secondAttribute="bottom" constant="-30" id="KUx-M6-sMc"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="bottom" secondItem="foV-TZ-2vw" secondAttribute="bottom" constant="20" id="Mg0-1E-z3C"/>
                 <constraint firstItem="I87-8m-hme" firstAttribute="centerX" secondItem="Uwm-xl-oEZ" secondAttribute="centerX" id="Mwb-kn-lTP"/>
+                <constraint firstItem="foV-TZ-2vw" firstAttribute="centerX" secondItem="fnl-2z-Ty3" secondAttribute="centerX" id="NX1-EY-Uex"/>
                 <constraint firstItem="J2H-9O-12D" firstAttribute="centerY" secondItem="elf-R6-Eg3" secondAttribute="centerY" id="TKX-4i-wMR"/>
                 <constraint firstItem="pWP-b5-vES" firstAttribute="centerY" secondItem="fnl-2z-Ty3" secondAttribute="centerY" id="U7u-Ep-g03"/>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="Uwm-xl-oEZ" secondAttribute="trailing" constant="8" id="WyT-Y2-hoW"/>
@@ -163,13 +162,16 @@
                 <constraint firstItem="elf-R6-Eg3" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" constant="23" id="zfN-nI-HIE"/>
             </constraints>
             <connections>
+                <outlet property="backbutton" destination="elf-R6-Eg3" id="opL-j1-hrn"/>
                 <outlet property="callStatus" destination="jYW-Rj-WvQ" id="3Wo-OB-iZh"/>
                 <outlet property="callTime" destination="mk5-lE-iL0" id="ev3-cY-Hej"/>
+                <outlet property="callingStackView" destination="J2H-9O-12D" id="UcY-VW-OcR"/>
                 <outlet property="cameraButton" destination="z6b-pa-cTX" id="lJY-RE-1aI"/>
                 <outlet property="cameraSwitch" destination="7UX-Fq-ifd" id="pyZ-BN-K0r"/>
                 <outlet property="collectionView" destination="Uwm-xl-oEZ" id="o00-OE-cA9"/>
                 <outlet property="remoteView" destination="Grk-4v-CLc" id="Wii-pQ-O3g"/>
                 <outlet property="speakerButton" destination="Xh7-nN-2ad" id="wkP-QU-8Xr"/>
+                <outlet property="titleLable" destination="cAr-Vs-nPM" id="1pJ-2t-hBe"/>
                 <outlet property="userAvatar" destination="pWP-b5-vES" id="Lpn-YO-btd"/>
                 <outlet property="userNames" destination="HbY-1U-KrD" id="5JU-Ya-Xfx"/>
             </connections>
