--- a/IOS-combine/Common/Overlay/BroadcastOverlay.xib
+++ b/IOS-combine/Common/Overlay/BroadcastOverlay.xib
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="19162" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19144"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -86,6 +87,7 @@
                     </subviews>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <constraints>
+                        <constraint firstItem="DFh-bk-tOp" firstAttribute="top" secondItem="GpQ-jZ-wpu" secondAttribute="bottom" constant="49" id="3p4-Rn-PtI"/>
                         <constraint firstAttribute="trailing" secondItem="6eQ-8R-eA6" secondAttribute="trailing" constant="19" id="4R0-H0-ax7"/>
                         <constraint firstItem="DFh-bk-tOp" firstAttribute="centerX" secondItem="GpQ-jZ-wpu" secondAttribute="centerX" id="D8o-3F-8Wx"/>
                         <constraint firstItem="GpQ-jZ-wpu" firstAttribute="leading" secondItem="clv-jj-Ces" secondAttribute="leading" constant="24" id="H5L-0x-aqI"/>
@@ -102,7 +104,6 @@
             <constraints>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="FYv-tr-kVA" secondAttribute="trailing" id="4a6-NC-hwp"/>
                 <constraint firstItem="FYv-tr-kVA" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="EdO-2i-R5W"/>
-                <constraint firstItem="clv-jj-Ces" firstAttribute="height" secondItem="i5M-Pr-FkT" secondAttribute="height" multiplier="0.45" id="ElC-MP-EdN"/>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="clv-jj-Ces" secondAttribute="trailing" constant="30" id="IhT-eb-v1M"/>
                 <constraint firstItem="FYv-tr-kVA" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" id="MdH-4h-adq"/>
                 <constraint firstItem="clv-jj-Ces" firstAttribute="centerY" secondItem="fnl-2z-Ty3" secondAttribute="centerY" id="YFQ-eq-0si"/>
